syntax = "proto3";

package v1;

import "google/protobuf/empty.proto";
import "admin-category.proto";
//import "google/protobuf/wrappers.proto";

message AdminProperty{
  string id = 1;
  uint32 user_id = 2;
  string title = 3;
  string code = 4;
  uint32 type = 5;
  uint32 display = 6;
  bool required = 7;
  bool multiple = 8;
  uint32 sort = 9;
  repeated AdminPropertyValue values = 10;
  repeated uint32 item_values = 11;
}

message AdminPropertyValue{
  uint32 id = 1;
  uint32 user_id = 2;
  uint32 property_id = 3;
  string value = 4;
  string image = 5;
  uint32 sort = 6;
}

message AdminPropertyRequest {
  uint32 id = 1;
}

message AdminPropertyValueRequest {
  uint32 id = 1;
}

message AdminPropertyBindRequest {
  uint32 id = 1;
  string category_id = 2;
}

message AdminPropertiesRequest {
  uint32 page = 1;
  uint32 page_size = 2;
  string sort = 3;
  string direction = 4;
}

message AdminEditPropertyRequest {
  uint32 id = 1;
  string title = 2;
  string code = 3;
  uint32 type = 4;
  uint32 display = 5;
  bool required = 6;
  bool multiple = 7;
  uint32 sort = 8;
}

message AdminDeletePropertyRequest {
  uint32 id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
  string sort = 4;
  string direction = 5;
}

message AdminEditPropertyValueRequest {
  uint32 id = 1;
  uint32 property_id = 2;
  string value = 3;
  uint32 sort = 4;
  string image = 5;
}

message AdminUploadPropertyRequest {
  string title = 1;
  string value = 2;
  uint32 item_id = 3;
}

message AdminPropertyResponse {
  AdminProperty property = 1;
}

message AdminPropertiesResponse {
  repeated AdminProperty properties = 1;
  uint32 position = 2;
  uint32 total = 3;
}

message AdminPropertyValueResponse {
  AdminPropertyValue property_value = 1;
}

service AdminPropertyService {
  rpc AdminProperty(AdminPropertyRequest) returns (AdminPropertyResponse);
  rpc AdminProperties(AdminPropertiesRequest) returns (AdminPropertiesResponse);
  rpc AdminEditProperty(AdminEditPropertyRequest) returns (AdminPropertyResponse);
  rpc AdminDeleteProperty(AdminDeletePropertyRequest) returns (AdminPropertiesResponse);
  rpc AdminEditPropertyValue(AdminEditPropertyValueRequest) returns (AdminPropertyResponse);
  rpc AdminDeletePropertyValue(AdminPropertyValueRequest) returns (AdminPropertyResponse);
  rpc AdminPropertyCategories(AdminPropertyRequest) returns (AdminCategoriesResponse);
  rpc AdminPropertyBindCategory(AdminPropertyBindRequest) returns (AdminCategoriesResponse);
  rpc AdminPropertyUnbindCategory(AdminPropertyBindRequest) returns (AdminCategoriesResponse);
  rpc AdminUploadProperty(AdminUploadPropertyRequest) returns (AdminPropertyResponse);
}
